--- a/p5.ipynb
+++ b/p5.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNg7ChvQmPukA3chlmtMN3K",
+      "authorship_tag": "ABX9TyM5XGmsusYf28dAI0KxlPF0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +27,23 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Neural Networks from Scratch"
+      ],
       "metadata": {
-        "id": "wou0xHrSxZnl"
-      },
-      "outputs": [],
+        "id": "PtAmfLK0e9u_"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "import nnfs\n",
         "\n",
         "nnfs.init()\n",
         "\n",
-        "np.random.seed(0)\n",
+        "X, y = nnfs.spiral_data(100, 3)\n",
         "\n",
         "# Input feature sets capital x is a standard in ML - actual input data.\n",
         "X = [[1.0, 2.0, 3.0, 2.5],\n",
@@ -57,68 +60,73 @@
         "    the network is dead. Then adding non-zero bias might make sense.\n",
         "    \"\"\"\n",
         "    def __init__(self, n_inputs, n_neurons):\n",
-        "        # Initial\n",
+        "        # Initialising weights the other way than before.\n",
+        "        # This way we avoid 1 extra transpose every time we do a forward.\n",
+        "        self.weights = 0.10 * np.random.randn(n_inputs, n_neurons)  # Expects shape in separate parameters\n",
+        "        self.biases = np.zeros((1, n_neurons))  # Expects a shape on 1st argument, there4 tuple\n",
+        "\n",
+        "    def forward(self, inputs):\n",
+        "        self.output = np.dot(inputs, self.weights) + self.biases\n",
+        "class Activation_ReLU:\n",
+        "    def forward(self, inputs):\n",
+        "        self.output = np.maximum(0, inputs)\n",
+        "\n",
+        "\n",
+        "# The number of inputs is how many features are inside each sample\n",
+        "# Number of neurons can be whatever you choose.\n",
+        "layer1 = Layer_Dense(4, 5)\n",
+        "# On layer 2, the inputs must match the outputs of layer 1\n",
         "layer2 = Layer_Dense(5, 2)\n",
         "\n",
         "layer1.forward(X)\n",
         "print(f\"Layer1 output: \\n{layer1.output}\")\n",
         "layer2.forward(layer1.output)\n",
-        "print(f\"Layer2 output: \\n{layer2.output}\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Neural Networks from Scratch\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Coding on ipad\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Hehehe"
+        "print(f\"Layer2 output: \\n{layer2.output}\")"
       ],
       "metadata": {
-        "id": "PtAmfLK0e9u_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# New section"
-      ],
-      "metadata": {
-        "id": "2iVROX8phHLD"
-      }
+        "id": "6is5Vucnh8P7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pip install nnfs"
+        "nnfs"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hm8JkVSfe80i",
-        "outputId": "606dbe1f-5348-47b5-8745-0b8d2e9650c7"
+        "id": "XSY_ZUIbo0OI",
+        "outputId": "87721952-22cd-462b-9c2f-998b9b641fc3"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting nnfs\n",
-            "  Downloading nnfs-0.5.1-py3-none-any.whl (9.1 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from nnfs) (1.23.5)\n",
-            "Installing collected packages: nnfs\n",
-            "Successfully installed nnfs-0.5.1\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<module 'nnfs' from '/usr/local/lib/python3.10/dist-packages/nnfs/__init__.py'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reserved for output area\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Reserved for output area"
+      ],
+      "metadata": {
+        "id": "2iVROX8phHLD"
+      }
     }
   ]
 }
